--- a/devagram-backend/package.json
+++ b/devagram-backend/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "jsonwebtoken": "^8.5.1",
     "md5": "^2.3.0",
     "mongoose": "^6.7.0",
     "next": "13.0.0",
@@ -16,6 +17,7 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/md5": "^2.3.2",
     "@types/node": "18.11.7",
     "@types/react": "18.0.23",
