--- a/devagram-backend/.env.example
+++ b/devagram-backend/.env.example
@@ -1,2 +1,6 @@
-DB_CONEXAO_STRING=
 MINHA_CHAVE_JWT=
+BUCKET_AVATARES=
+DB_CONEXAO_STRING=
+BUCKET_PUBLICACOES=
+CHAVE_GRAVACAO_AVATARES=
+CHAVE_GRAVACAO_PUBLICACOES=
