--- a/devagram-backend/package.json
+++ b/devagram-backend/package.json
@@ -15,7 +15,7 @@
     "moment": "^2.29.4",
     "mongoose": "^6.7.0",
     "multer": "^1.4.5-lts.1",
-    "next": "13.0.0",
+    "next": "^13.0.2-canary.2",
     "next-connect": "^0.13.0",
     "nextjs-cors": "^2.1.1",
     "react": "18.2.0",
